#==================================
# mod_cluster native parent project
# @author: Michal Karm Babacek
#==================================

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(mod_cluster)

IF(WIN32)
    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /O2 /Wall /Z7")
    SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} /Od /Wall /Zi")
ELSE()
    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -O2 -std=gnu99 -fPIC -Wall -Wextra")
    SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -g -p -O1 -std=gnu99 -fPIC -Wall -Wextra")
ENDIF()

SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/modules)
SET(PROJECT_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/modules ${CMAKE_MODULE_PATH})

FIND_PACKAGE(APR REQUIRED)
FIND_PACKAGE(APACHE REQUIRED)

INCLUDE_DIRECTORIES(${APR_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${APRUTIL_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${APACHE_INCLUDE_DIR})

INCLUDE_DIRECTORIES("${PROJECT_INCLUDE_DIR}")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}")

ADD_SUBDIRECTORY(mod_proxy_cluster)
ADD_SUBDIRECTORY(advertise)
ADD_SUBDIRECTORY(mod_cluster_slotmem)
ADD_SUBDIRECTORY(mod_manager)
