#==================================
# mod_advertise CMake file
# @author: Michal Karm Babacek
#==================================

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(advertise)

SET(PROJECT_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
SET(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})

SET(ADVERTISE_SRCS ${PROJECT_SOURCE_DIR}/mod_advertise.c)

INCLUDE_DIRECTORIES("${PROJECT_BINARY_DIR}")
INCLUDE_DIRECTORIES("${PROJECT_INCLUDE_DIR}")

ADD_LIBRARY(mod_advertise MODULE ${ADVERTISE_SRCS})
SET_TARGET_PROPERTIES(mod_advertise PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES(mod_advertise PROPERTIES SUFFIX ".so")
TARGET_LINK_LIBRARIES(mod_advertise ${APR_LIBRARIES} ${APRUTIL_LIBRARIES} ${APACHE_LIBRARY})