#==================================
# mod_proxy_cluster CMake file
# @author: Michal Karm Babacek
#==================================

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(mod_proxy_cluster)

SET(PROJECT_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
SET(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})

SET(MOD_PROXY_CLUSTER_SRCS ${PROJECT_SOURCE_DIR}/mod_proxy_cluster.c)

INCLUDE_DIRECTORIES("${PROJECT_BINARY_DIR}")
INCLUDE_DIRECTORIES("${PROJECT_INCLUDE_DIR}")

ADD_LIBRARY(mod_proxy_cluster MODULE ${MOD_PROXY_CLUSTER_SRCS})
SET_TARGET_PROPERTIES(mod_proxy_cluster PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES(mod_proxy_cluster PROPERTIES SUFFIX ".so")
IF(WIN32)
    TARGET_LINK_LIBRARIES(mod_proxy_cluster ${PROXY_LIBRARY} ${APR_LIBRARIES} ${APRUTIL_LIBRARIES} ${APACHE_LIBRARY})
ELSE()
    TARGET_LINK_LIBRARIES(mod_proxy_cluster ${APR_LIBRARIES} ${APRUTIL_LIBRARIES} ${APACHE_LIBRARY})
ENDIF()
